--- a/mindx-dl/deploy/offline/steps/offline_load_images.yaml
+++ b/mindx-dl/deploy/offline/steps/offline_load_images.yaml
@@ -15,46 +15,59 @@
       shell:
         chdir: "{{docker_images_dir}}"
         cmd:
-          docker load < kube-apiserver_arm64.tar.gz;
-          docker load < kube-controller-manager_arm64.tar.gz;
-          docker load < kube-scheduler_arm64.tar.gz;
-          docker load < kube-proxy_arm64.tar.gz;
-          docker load < etcd_arm64.tar.gz;
-          docker load < pause_arm64.tar.gz;
-          docker load < coredns_arm64.tar.gz;
-          docker load < calico-node_arm64.tar.gz;
-          docker load < calico-pod2daemon-flexvol_arm64.tar.gz;
-          docker load < calico-cni_arm64.tar.gz;
-          docker load < calico-kube-controllers_arm64.tar.gz
+          docker load -i kube-apiserver_arm64.tar.gz;
+          docker load -i kube-controller-manager_arm64.tar.gz;
+          docker load -i kube-scheduler_arm64.tar.gz;
+          docker load -i kube-proxy_arm64.tar.gz;
+          docker load -i etcd_arm64.tar.gz;
+          docker load -i pause_arm64.tar.gz;
+          docker load -i coredns_arm64.tar.gz;
+          docker load -i calico-node_arm64.tar.gz;
+          docker load -i calico-pod2daemon-flexvol_arm64.tar.gz;
+          docker load -i calico-cni_arm64.tar.gz;
+          docker load -i calico-kube-controllers_arm64.tar.gz
       when: ansible_architecture == "aarch64"
 
     - name: Load kubernetes basic images - x86_64
       shell:
         chdir: "{{docker_images_dir}}"
         cmd:
-          docker load < kube-apiserver_amd64.tar.gz;
-          docker load < kube-controller-manager_amd64.tar.gz;
-          docker load < kube-scheduler_amd64.tar.gz;
-          docker load < kube-proxy_amd64.tar.gz;
-          docker load < etcd_amd64.tar.gz;
-          docker load < pause_amd64.tar.gz;
-          docker load < coredns_amd64.tar.gz;
-          docker load < calico-node_amd64.tar.gz;
-          docker load < calico-pod2daemon-flexvol_amd64.tar.gz;
-          docker load < calico-cni_amd64.tar.gz;
-          docker load < calico-kube-controllers_amd64.tar.gz
+          docker load -i kube-apiserver_amd64.tar.gz;
+          docker load -i kube-controller-manager_amd64.tar.gz;
+          docker load -i kube-scheduler_amd64.tar.gz;
+          docker load -i kube-proxy_amd64.tar.gz;
+          docker load -i etcd_amd64.tar.gz;
+          docker load -i pause_amd64.tar.gz;
+          docker load -i coredns_amd64.tar.gz;
+          docker load -i calico-node_amd64.tar.gz;
+          docker load -i calico-pod2daemon-flexvol_amd64.tar.gz;
+          docker load -i calico-cni_amd64.tar.gz;
+          docker load -i calico-kube-controllers_amd64.tar.gz
       when: ansible_architecture == "x86_64"
 
-    - name: Load mindx images
+    - name: Load mindx images - arm64
       shell:
         chdir: "{{docker_images_dir}}"
         cmd:
-          docker load -i vc-webhook-manager-base*;
-          docker load -i vc-controller-manager*;
-          docker load -i vc-scheduler*;
-          docker load -i vc-webhook-manager-v*;
-          docker load -i hccl-controller*;
+          docker load -i vc-webhook-manager-base*arm64.tar.gz;
+          docker load -i vc-controller-manager*arm64.tar.gz;
+          docker load -i vc-scheduler*arm64.tar.gz;
+          docker load -i vc-webhook-manager-v*arm64.tar.gz;
+          docker load -i hccl-controller*arm64.tar.gz;
       tags: basic_only
+      when: ansible_architecture == "aarch64"
+
+    - name: Load mindx images - x86_64
+      shell:
+        chdir: "{{docker_images_dir}}"
+        cmd:
+          docker load -i vc-webhook-manager-base*amd64.tar.gz;
+          docker load -i vc-controller-manager*amd64.tar.gz;
+          docker load -i vc-scheduler*amd64.tar.gz;
+          docker load -i vc-webhook-manager-v*amd64.tar.gz;
+          docker load -i hccl-controller*amd64.tar.gz;
+      tags: basic_only
+      when: ansible_architecture == "x86_64"
 
 - hosts: localnode
   remote_user: root
@@ -62,13 +75,23 @@
     docker_images_dir: "{{dls_root_dir}}/docker_images"
 
   tasks:
-    - name: Load mindx images
+    - name: Load mindx images - arm64
       shell:
         chdir: "{{docker_images_dir}}"
         cmd:
-          docker load -i Ascend-K8sDevicePlugin*Docker*;
-          docker load -i huawei-cadvisor-beta*;
+          docker load -i Ascend-K8sDevicePlugin*arm64-Docker.tar.gz;
+          docker load -i huawei-cadvisor*arm64.tar.gz;
       tags: basic_only
+      when: ansible_architecture == "aarch64"
+
+    - name: Load mindx images - x86_64
+      shell:
+        chdir: "{{docker_images_dir}}"
+        cmd:
+          docker load -i Ascend-K8sDevicePlugin*amd64-Docker.tar.gz;
+          docker load -i huawei-cadvisor*amd64.tar.gz;
+      tags: basic_only
+      when: ansible_architecture == "x86_64"
 
 # Copy docker images to workers
 - hosts: workers
@@ -83,7 +106,7 @@
         dest: "{{docker_images_dir}}/"
       with_items:
         - Ascend-K8sDevicePlugin-{{deviceplugin_version}}-arm64-Docker.tar.gz
-        - huawei-cadvisor-beta-{{hccl_version}}-arm64.tar.gz
+        - huawei-cadvisor-{{hccl_version}}-arm64.tar.gz
       tags: basic_only
       when: ansible_architecture == "aarch64"
 
@@ -92,8 +115,8 @@
         src: "{{docker_images_dir}}/{{item}}"
         dest: "{{docker_images_dir}}/"
       with_items:
-        - Ascend-K8sDevicePlugin-{{deviceplugin_version}}-x86-Docker.tar.gz
-        - huawei-cadvisor-beta-{{hccl_version}}-amd64.tar.gz
+        - Ascend-K8sDevicePlugin-{{deviceplugin_version}}-amd64-Docker.tar.gz
+        - huawei-cadvisor-{{hccl_version}}-amd64.tar.gz
       tags: basic_only
       when: ansible_architecture == "x86_64"
 
@@ -101,8 +124,8 @@
       shell:
         chdir: "{{docker_images_dir}}"
         cmd:
-          docker load -i Ascend-K8sDevicePlugin*Docker*;
-          docker load -i huawei-cadvisor-beta*;
+          docker load -i Ascend-K8sDevicePlugin*arm64-Docker.tar.gz;
+          docker load -i huawei-cadvisor*arm64.tar.gz;
       tags: basic_only
       when: ansible_architecture == "aarch64"
 
@@ -110,8 +133,8 @@
       shell:
         chdir: "{{docker_images_dir}}"
         cmd:
-          docker load -i Ascend-K8sDevicePlugin*Docker*;
-          docker load -i huawei-cadvisor-beta*;
+          docker load -i Ascend-K8sDevicePlugin*amd64-Docker.tar.gz;
+          docker load -i huawei-cadvisor*amd64.tar.gz;
       tags: basic_only
       when: ansible_architecture == "x86_64"
 
@@ -145,22 +168,22 @@
       shell:
         chdir: "{{docker_images_dir}}"
         cmd:
-          docker load < kube-proxy_arm64.tar.gz;
-          docker load < pause_arm64.tar.gz;
-          docker load < calico-node_arm64.tar.gz;
-          docker load < calico-pod2daemon-flexvol_arm64.tar.gz;
-          docker load < calico-cni_arm64.tar.gz;
-          docker load < calico-kube-controllers_arm64.tar.gz;
+          docker load -i kube-proxy_arm64.tar.gz;
+          docker load -i pause_arm64.tar.gz;
+          docker load -i calico-node_arm64.tar.gz;
+          docker load -i calico-pod2daemon-flexvol_arm64.tar.gz;
+          docker load -i calico-cni_arm64.tar.gz;
+          docker load -i calico-kube-controllers_arm64.tar.gz;
       when: ansible_architecture == "aarch64"
 
     - name: Load additional images - x86_64
       shell:
         chdir: "{{docker_images_dir}}"
         cmd:
-          docker load < kube-proxy_amd64.tar.gz;
-          docker load < pause_amd64.tar.gz;
-          docker load < calico-node_amd64.tar.gz;
-          docker load < calico-pod2daemon-flexvol_amd64.tar.gz;
-          docker load < calico-cni_amd64.tar.gz;
-          docker load < calico-kube-controllers_amd64.tar.gz;
+          docker load -i kube-proxy_amd64.tar.gz;
+          docker load -i pause_amd64.tar.gz;
+          docker load -i calico-node_amd64.tar.gz;
+          docker load -i calico-pod2daemon-flexvol_amd64.tar.gz;
+          docker load -i calico-cni_amd64.tar.gz;
+          docker load -i calico-kube-controllers_amd64.tar.gz;
       when: ansible_architecture == "x86_64"
