Match-id-0db73cd9889e705bd4e5fddb427043fd86a2ad5a

--- a/mindx-dl/deploy/offline/steps/init_kubernetes.yaml
+++ b/mindx-dl/deploy/offline/steps/init_kubernetes.yaml
@@ -11,13 +11,15 @@
       shell:
         cmd:
           unset http_proxy https_proxy
-      tags: common
+      tags:
+        - common
+        - basic_only
 
-# init master
+# Init k8s cluster
 - hosts: localnode, master
   remote_user: root
   vars:
-    deploy_yaml_dir: "{{dls_root_dir}}/yaml"
+    deploy_yaml_dir: "{{ dls_root_dir }}/yaml"
 
   tasks:
     - name: reset k8s
@@ -31,7 +33,7 @@
       shell:
         cmd:
           kubeadm init --kubernetes-version=v1.17.3
-            --node-name={{ansible_hostname}}
+            --node-name={{ ansible_hostname }}
             --pod-network-cidr=192.168.0.0/16
             --apiserver-advertise-address={{ master_ip }}
       tags: init-master
@@ -47,7 +49,7 @@
     # apply deploy/yaml/calico.yaml
     - name: Apply calico yaml file
       shell:
-        chdir: "{{deploy_yaml_dir}}"
+        chdir: "{{ deploy_yaml_dir }}"
         cmd:
           kubectl apply -f calico.yaml
       tags: init-master
@@ -79,10 +81,12 @@
     - name: Label master node
       shell:
         cmd:
-          kubectl label nodes {{ansible_hostname}} masterselector=dls-master-node
-      tags: init-master
+          kubectl label nodes {{ ansible_hostname }} masterselector=dls-master-node
+      tags:
+        - init-master
+        - basic_only
 
-# print join cluster command
+# Register join cluster command
 - hosts: master
   remote_user: root
 
@@ -94,34 +98,32 @@
       register: join_command
       tags: init-workers
 
-    - name: Set facts
+    - name: Set join facts
       add_host:
-        name: "all_workers"
-        join_command: "{{join_command.stdout}}"
+        name: "KUBERNETES_JOIN_COMMAND"
+        join_command: "{{ join_command.stdout }}"
+      tags: init-workers
 
-# init workers
+
+# Add the worker node to the cluster and grant the Kubernetes administrator permission to the worker node.
 - hosts: workers
   remote_user: root
 
   tasks:
-    - name: Workers join cluster
-      shell:
-        cmd:
-          echo {{ hostvars["all_workers"]["join_command"] }}
-
     - name: reset k8s
       shell:
         cmd:
           kubeadm reset -f;
           rm -rf /etc/cni/net.d /root/.kube/
-      tags: init-master
+      tags: init-workers
       when:
         - ansible_default_ipv4['address'] != master_ip
       ignore_errors: True
 
     - name: Join into cluster
       shell:
-        cmd: "{{join_cluster_command}}"
+        cmd:
+          unset http_proxy https_proxy && {{ hostvars["KUBERNETES_JOIN_COMMAND"]["join_command"] }}
       tags: init-workers
       when:
         - ansible_default_ipv4['address'] != master_ip
@@ -131,8 +133,10 @@
       copy:
         src: /etc/kubernetes/admin.conf
         dest: /etc/kubernetes/
-        backup: yes
-      tags: init-workers
+        force: yes
+      tags:
+        - init-workers
+        - basic_only
       when:
         - ansible_default_ipv4['address'] != master_ip
 
@@ -140,7 +144,11 @@
       shell:
         cmd:
           mkdir -p ~/.kube;
+          cp -f ~/.kube/config ~/.kube/config_bak || true;
           cp -f /etc/kubernetes/admin.conf ~/.kube/config
+      tags:
+        - init-workers
+        - basic_only
       when:
         - ansible_default_ipv4['address'] != master_ip
 
@@ -149,6 +157,9 @@
         path: /etc/profile
         line: "export KUBECONFIG=/etc/kubernetes/kubelet.conf"
         state: absent
+      tags:
+        - init-workers
+        - basic_only
       when:
         - ansible_default_ipv4['address'] != master_ip
 
@@ -157,6 +168,9 @@
         path: /etc/profile
         line: "export KUBECONFIG=/etc/kubernetes/admin.conf"
         state: present
+      tags:
+        - init-workers
+        - basic_only
       when:
         - ansible_default_ipv4['address'] != master_ip
 
@@ -168,11 +182,13 @@
           systemctl restart kubelet
       args:
         executable: "/bin/bash"
-      tags: init-workers
+      tags:
+        - init-workers
+        - basic_only
       when:
         - ansible_default_ipv4['address'] != master_ip
 
-# init workers
+# Labeling Work Nodes
 - hosts: localnode, workers
   remote_user: root
 
@@ -180,11 +196,14 @@
     - name: Label training nodes - arm64
       shell:
         cmd:
+          unset http_proxy https_proxy;
           kubectl label nodes {{ansible_hostname}} node-role.kubernetes.io/worker=worker --overwrite=true;
           kubectl label nodes {{ansible_hostname}} workerselector=dls-worker-node --overwrite=true;
           kubectl label nodes {{ansible_hostname}} accelerator=huawei-Ascend910 --overwrite=true;
           kubectl label nodes {{ansible_hostname}} host-arch=huawei-arm --overwrite=true
-      tags: init-workers
+      tags:
+        - init-workers
+        - basic_only
       when:
         - ansible_architecture == "aarch64"
         - ansible_hostname in groups['training_node']
@@ -192,11 +211,14 @@
     - name: Label training nodes - x86_64
       shell:
         cmd:
+          unset http_proxy https_proxy;
           kubectl label nodes {{ansible_hostname}} node-role.kubernetes.io/worker=worker --overwrite=true;
           kubectl label nodes {{ansible_hostname}} workerselector=dls-worker-node --overwrite=true;
           kubectl label nodes {{ansible_hostname}} accelerator=huawei-Ascend910 --overwrite=true;
           kubectl label nodes {{ansible_hostname}} host-arch=huawei-x86 --overwrite=true
-      tags: init-workers
+      tags:
+        - init-workers
+        - basic_only
       when:
         - ansible_architecture == "x86_64"
         - ansible_hostname in groups['training_node']
@@ -204,11 +226,14 @@
     - name: Label inference nodes - arm64
       shell:
         cmd:
+          unset http_proxy https_proxy;
           kubectl label nodes {{ansible_hostname}} node-role.kubernetes.io/worker=worker --overwrite=true;
           kubectl label nodes {{ansible_hostname}} workerselector=dls-worker-node --overwrite=true;
           kubectl label nodes {{ansible_hostname}} accelerator=huawei-Ascend310 --overwrite=true;
           kubectl label nodes {{ansible_hostname}} host-arch=huawei-arm --overwrite=true
-      tags: init-workers
+      tags:
+        - init-workers
+        - basic_only
       when:
         - ansible_architecture == "aarch64"
         - ansible_hostname in groups['inference_node']
@@ -216,16 +241,19 @@
     - name: Label inference nodes - x86_64
       shell:
         cmd:
+          unset http_proxy https_proxy;
           kubectl label nodes {{ansible_hostname}} node-role.kubernetes.io/worker=worker --overwrite=true;
           kubectl label nodes {{ansible_hostname}} workerselector=dls-worker-node --overwrite=true;
           kubectl label nodes {{ansible_hostname}} accelerator=huawei-Ascend310 --overwrite=true;
           kubectl label nodes {{ansible_hostname}} host-arch=huawei-x86 --overwrite=true
-      tags: init-workers
+      tags:
+        - init-workers
+        - basic_only
       when:
         - ansible_architecture == "x86_64"
         - ansible_hostname in groups['inference_node']
 
-# init workers
+# Restore the K8s permission of the worker node.
 - hosts: workers
   remote_user: root
 
@@ -233,7 +261,10 @@
     - name: Replace config
       shell:
         cmd:
-          cp -f /etc/kubernetes/kubelet.conf ~/.kube/config
+          cp -f /etc/kubernetes/kubelet.conf ~/.kube/config || mv -f ~/.kube/config_bak ~/.kube/config
+      tags:
+        - init-workers
+        - basic_only
       when:
         - ansible_default_ipv4['address'] != master_ip
 
@@ -242,7 +273,9 @@
         path: /etc/profile
         regexp: 'export KUBECONFIG(.*)=(.*)/etc'
         line: 'export KUBECONFIG=/etc/kubernetes/kubelet.conf'
-      tags: init-workers
+      tags:
+        - init-workers
+        - basic_only
       when:
         - ansible_default_ipv4['address'] != master_ip
 
@@ -254,6 +287,8 @@
           systemctl restart kubelet;
       args:
         executable: "/bin/bash"
-      tags: init-workers
+      tags:
+        - init-workers
+        - basic_only
       when:
         - ansible_default_ipv4['address'] != master_ip
