--- a/mindx-dl/deploy/offline/steps/clean_services.yaml
+++ b/mindx-dl/deploy/offline/steps/clean_services.yaml
@@ -5,12 +5,12 @@
 - hosts: localnode, master
   remote_user: root
   vars:
-    deploy_yaml_dir: "{{dls_root_dir}}/yaml"
+    deploy_yaml_dir: "{{ dls_root_dir }}/yaml"
 
   tasks:
   - name: remove volcano
     shell:
-      chdir: "{{deploy_yaml_dir}}"
+      chdir: "{{ deploy_yaml_dir }}"
       cmd:
         kubectl delete -f volcano-*.yaml
     tags: volcano
@@ -18,15 +18,15 @@
 
   - name: remove cadvisor
     shell:
-      chdir: "{{deploy_yaml_dir}}/kubernetes/overlays"
+      chdir: "{{ deploy_yaml_dir }}"
       cmd:
-        kubectl delete -k huawei
+        kubectl delete -f cadvisor-*.yaml
     tags: cadvisor
     ignore_errors: yes
 
   - name: remove hccl-controller
     shell:
-      chdir: "{{deploy_yaml_dir}}"
+      chdir: "{{ deploy_yaml_dir }}"
       cmd:
         kubectl delete -f hccl-controller*.yaml
     tags: hccl-controller
@@ -34,7 +34,7 @@
 
   - name: remove device-plugin
     shell:
-      chdir: "{{deploy_yaml_dir}}"
+      chdir: "{{ deploy_yaml_dir }}"
       cmd:
         kubectl delete -f ascendplugin-310*.yaml;
         kubectl delete -f ascendplugin-volcano*.yaml
