--- a/mindx-dl/deploy/offline/steps/offline_deploy_service.yaml
+++ b/mindx-dl/deploy/offline/steps/offline_deploy_service.yaml
@@ -2,7 +2,7 @@
 ---
 # This playbook is used to deploy the MindX DL platform.
 # Before running the script, ensure that the dependent files are stored in the 'dls_root_dir' directory defined in /etc/ansible/hosts.
-- hosts: worker
+- hosts: localnode, workers
   remote_user: root
 
   tasks:
@@ -48,8 +48,9 @@
 
   tasks:
     - name: Remove /var/log/atlas_dls
-      shell:
-        cmd: rm -rf /var/log/atlas_dls
+      file:
+        path: /var/log/atlas_dls
+        state: absent
       ignore_errors: True
 
     - name: Create dls_core log directory
@@ -91,41 +92,6 @@
         state: present
         create: yes
 
-    - name: Create log directory for cadvisor and device-plugin
-      file:
-        path: /var/log/{{ item }}
-        state: directory
-        mode: "0750"
-      with_items:
-        - devicePlugin
-        - cadvisor
-
-    - name: Add acvisor log config information
-      blockinfile:
-        path: /etc/logrotate.d/mindx_dl_advisor
-        block: |
-          /var/log/devicePlugin/*.log
-          /var/log/cadvisor/*.log{
-              daily
-              rotate 8
-              size 20M
-              compress
-              dateext
-              missingok
-              notifempty
-              copytruncate
-              create 0640 root root
-              sharedscripts
-              postrotate
-                  chmod 640 /var/log/devicePlugin/*.log
-                  chmod 640 /var/log/cadvisor/*.log
-                  chmod 440 /var/log/devicePlugin/*.log-*
-                  chmod 440 /var/log/cadvisor/*.log-*
-              endscript
-          }
-        state: present
-        create: yes
-
     - name: Deploy hccl-controller
       shell:
         chdir: "{{deploy_yaml_dir}}"
@@ -138,14 +104,10 @@
           kubectl apply -f ascendplugin-volcano*.yaml;
           kubectl apply -f ascendplugin-310*.yaml
 
-    # directory contains three yamls:
-    #   cadvisor-args.yaml
-    #   gpu-privilages.yaml
-    #   kustomization.yaml
     - name: Deploy cadvisor
       shell:
-        chdir: "{{deploy_yaml_dir}}/kubernetes/overlays"
-        cmd: kubectl apply -k huawei
+        chdir: "{{deploy_yaml_dir}}"
+        cmd: kubectl apply -f cadvisor-*.yaml
 
     - name: Deploy volcano
       shell:
