--- a/mindx-dl/deploy/offline/steps/set_global_env.yaml
+++ b/mindx-dl/deploy/offline/steps/set_global_env.yaml
@@ -174,6 +174,7 @@
       shell:
         cmd:
           useradd -d /home/hwMindX -u 9000 -m -s /bin/bash hwMindX || true;
+          useradd -d /home/HwHiAiUser -u 1000 -m -s /bin/bash HwHiAiUser || true;
           usermod -a -G HwHiAiUser hwMindX
       tags: basic_only
 
