--- a/mindx-dl/uninstall/uninstall.yaml
+++ b/mindx-dl/uninstall/uninstall.yaml
@@ -174,6 +174,7 @@
       ignore_errors: True
 
 
+
 # This play is used to remove k8s & docker and restore system environment on all nodes(master & cluster).
 - hosts: localnode, cluster
   remote_user: root
@@ -189,21 +190,22 @@
       when: whether_uninstall_k8s_and_docker == true
       ignore_errors: True
 
-    - name: Uninstall kubernetes on every node
-      apt:
-        pkg:
-          - kubeadm
-          - kubectl
-          - kubelet
-          - kubernetes-cni
-          - kube*
-        state: absent
-        purge: yes
-        autoremove: yes
+    - name: Uninstall kubernetes on every node - Ubuntu
+      shell:
+        apt-get --purge remove kubeadm kubectl kubelet kubernetes-cni kube* -y;
+        apt-get autoremove -y
+      ignore_errors: True
       when:
         - whether_uninstall_k8s_and_docker == true
         - ansible_distribution == 'Ubuntu'
+
+    - name: Uninstall kubernetes on every node - CentOS
+      shell:
+
       ignore_errors: True
+      when:
+        - whether_uninstall_k8s_and_docker == true
+        - ansible_distribution == 'CentOS'
 
     - name: Remove residule files
       file:
@@ -221,21 +223,23 @@
         - /var/etcd
       when: whether_uninstall_k8s_and_docker == true
 
-    - name: Uninstall docker on every node
-      apt:
-        pkg:
-          - docker
-          - docker-ce
-          - docker-engine
-          - docker.io
-          - containerd
-          - runc
-        state: absent
-        purge: yes
-        autoremove: yes
+    - name: Uninstall docker on every node - Ubuntu
+      shell:
+        cmd:
+          apt-get --purge remove docker docker-ce docker-engine docker.io containerd runc -y;
+          apt-get autoremove -y
+      ignore_errors: True
       when:
         - whether_uninstall_k8s_and_docker == true
         - ansible_distribution == 'Ubuntu'
+
+    - name: Uninstall docker on every node - CentOS
+      shell:
+        cmd:
+      ignore_errors: True
+      when:
+        - whether_uninstall_k8s_and_docker == true
+        - ansible_distribution == 'CentOS'
 
     - name: Restore system configs
       shell:
@@ -257,7 +261,6 @@
       when:
         - whether_uninstall_k8s_and_docker == true
         - ansible_distribution == 'Ubuntu'
-
 
 
 # This play is used to uninstall nfs.
@@ -282,18 +285,24 @@
       when:
         - whether_uninstall_nfs == true
 
-    - name: Uninstall nfs-server
-      apt:
-        pkg:
-          - nfs-kernel-server
-          - nfs-common
-          - rpcbind
-        state: absent
-        purge: yes
-        autoremove: yes
+    - name: Uninstall nfs-server - Ubuntu
+      shell:
+        cmd:
+          apt-get --purge remove nfs-kernel-server nfs-common rpcbind -y;
+          apt-get autoremove -y
+      ignore_errors: True
       when:
         - whether_uninstall_nfs == true
         - ansible_distribution == 'Ubuntu'
+
+    - name: Uninstall nfs-server - CentOS
+      shell:
+        cmd:
+
+      ignore_errors: True
+      when:
+        - whether_uninstall_nfs == true
+        - ansible_distribution == 'CentOS'
 
 # This play is used to uninstall nfs.
 - hosts: cluster
@@ -302,13 +311,22 @@
     - config.yaml
 
   tasks:
-    - name: Uninstall nfs-common
-      apt:
-        pkg:
-          - nfs-common
-        state: absent
-        purge: yes
-        autoremove: yes
+    - name: Uninstall nfs-common - Ubuntu
+      shell:
+        cmd:
+          apt-get --purge remove nfs-common -y;
+          apt-get autoremove -y
+      ignore_errors: True
       when:
         - whether_uninstall_nfs == true
         - ansible_distribution == 'Ubuntu'
+        - ansible_default_ipv4['address'] != nfs_service_ip
+
+    - name: Uninstall nfs-common - CentOS
+      shell:
+        cmd:
+      ignore_erors: True
+      when:
+        - whether_uninstall_nfs == true
+        - ansible_distribution == 'CentOS'
+        - ansible_default_ipv4['address'] != nfs_service_ip
