--- a/mindx-dl/uninstall/uninstall.yaml
+++ b/mindx-dl/uninstall/uninstall.yaml
@@ -192,7 +192,7 @@
 
     - name: Uninstall kubernetes on every node - Ubuntu
       shell:
-        apt-get --purge remove kubeadm kubectl kubelet kubernetes-cni kube* -y;
+        apt-get --purge remove -y kubeadm kubectl kubelet kubernetes-cni kube*;
         apt-get autoremove -y
       ignore_errors: True
       when:
@@ -201,7 +201,8 @@
 
     - name: Uninstall kubernetes on every node - CentOS
       shell:
-
+        yum remove -y kubeadm kubectl kubelet kubernetes-cni;
+        yum autoremove -y
       ignore_errors: True
       when:
         - whether_uninstall_k8s_and_docker == true
@@ -226,7 +227,7 @@
     - name: Uninstall docker on every node - Ubuntu
       shell:
         cmd:
-          apt-get --purge remove docker docker-ce docker-engine docker.io containerd runc -y;
+          apt-get --purge remove -y docker docker-ce docker-engine docker.io containerd runc;
           apt-get autoremove -y
       ignore_errors: True
       when:
@@ -236,6 +237,8 @@
     - name: Uninstall docker on every node - CentOS
       shell:
         cmd:
+          yum remove -y docker-engine;
+          yum autoremove -y
       ignore_errors: True
       when:
         - whether_uninstall_k8s_and_docker == true
@@ -249,7 +252,6 @@
           sed -ri 's/net.ipv4.ip_forward(.*)=(.*)1/net.ipv4.ip_forward = 0/' /etc/sysctl.conf
       when:
         - whether_uninstall_k8s_and_docker == true
-        - ansible_distribution == 'Ubuntu'
 
     - name: Restore system configs
       file:
@@ -260,7 +262,6 @@
         - /etc/rc.local
       when:
         - whether_uninstall_k8s_and_docker == true
-        - ansible_distribution == 'Ubuntu'
 
 
 # This play is used to uninstall nfs.
@@ -288,7 +289,7 @@
     - name: Uninstall nfs-server - Ubuntu
       shell:
         cmd:
-          apt-get --purge remove nfs-kernel-server nfs-common rpcbind -y;
+          apt-get --purge remove -y nfs-kernel-server nfs-common rpcbind;
           apt-get autoremove -y
       ignore_errors: True
       when:
@@ -298,7 +299,8 @@
     - name: Uninstall nfs-server - CentOS
       shell:
         cmd:
-
+          yum remove -y nfs-utils rpcbind;
+          yum autoremove -y
       ignore_errors: True
       when:
         - whether_uninstall_nfs == true
@@ -314,7 +316,7 @@
     - name: Uninstall nfs-common - Ubuntu
       shell:
         cmd:
-          apt-get --purge remove nfs-common -y;
+          apt-get --purge remove -y nfs-common;
           apt-get autoremove -y
       ignore_errors: True
       when:
@@ -325,6 +327,8 @@
     - name: Uninstall nfs-common - CentOS
       shell:
         cmd:
+          yum remove -y nfs-utils rpcbind;
+          yum autoremove -y
       ignore_erors: True
       when:
         - whether_uninstall_nfs == true
