Match-id-eafe24a216769c0f07493fa81afce7259d327b22

--- a/mindx-dl/deploy/offline/steps/offline_deploy_service.yaml
+++ b/mindx-dl/deploy/offline/steps/offline_deploy_service.yaml
@@ -44,7 +44,7 @@
 - hosts: localnode, master
   remote_user: root
   vars:
-    deploy_yaml_dir: "{{dls_root_dir}}/yaml"
+    deploy_yaml_dir: "{{dls_root_dir}}/yamls"
 
   tasks:
     - name: Remove /var/log/atlas_dls
