Match-id-6b279e23e7d5771a84bee33ab610dcbc2b9b7dd6

--- a/mindx-dl/deploy/offline/steps/set_global_env.yaml
+++ b/mindx-dl/deploy/offline/steps/set_global_env.yaml
@@ -165,6 +165,7 @@
       shell:
         cmd:
           modprobe br_netfilter;
+          echo 1 > /proc/sys/net/bridge/bridge-nf-call-iptables;
           swapoff -a;
           sed -i 's/.*swap.*/#&/' /etc/fstab;
 
