Match-id-d21ef0854d7ceea5132ce8e27243219051752e38

--- a/mindx-dl/deploy/offline/steps/init_kubernetes.yaml
+++ b/mindx-dl/deploy/offline/steps/init_kubernetes.yaml
@@ -81,7 +81,7 @@
     - name: Label master node
       shell:
         cmd:
-          kubectl label nodes {{ ansible_hostname }} masterselector=dls-master-node
+          kubectl label nodes {{ ansible_hostname }} masterselector=dls-master-node --overwrite=true
       tags:
         - init-master
         - basic_only
