Match-id-29066bddc0c9512b7bb5690d8f2da195ae83a4a0

--- a/mindx-dl/deploy/offline/steps/offline_install_packages.yaml
+++ b/mindx-dl/deploy/offline/steps/offline_install_packages.yaml
@@ -1,4 +1,4 @@
-# Copyright ? Huawei Technologies Co., Ltd. 2020. All rights reserved.
+# Copyright © Huawei Technologies Co., Ltd. 2020. All rights reserved.
 ---
 # This playbook is used to install offline downloaded software packages, including NFS, Docker and K8S.
 # Before running the script, ensure that the required software packages has been uploaded to the 'dls_root_dir' directory defined in /etc/ansible/hosts.
