--- a/mindx-dl/deploy/offline/steps/clean_services.yaml
+++ b/mindx-dl/deploy/offline/steps/clean_services.yaml
@@ -1,4 +1,4 @@
-# Copyright ? Huawei Technologies Co., Ltd. 2020. All rights reserved.
+# Copyright © Huawei Technologies Co., Ltd. 2020. All rights reserved.
 ---
 # This playbook is used to cleaning up services.
 
