--- a/mindx-dl/deploy/offline/steps/offline_deploy_service.yaml
+++ b/mindx-dl/deploy/offline/steps/offline_deploy_service.yaml
@@ -1,4 +1,4 @@
-# Copyright ? Huawei Technologies Co., Ltd. 2020. All rights reserved.
+# Copyright © Huawei Technologies Co., Ltd. 2020. All rights reserved.
 ---
 # This playbook is used to deploy the MindX DL platform.
 # Before running the script, ensure that the dependent files are stored in the 'dls_root_dir' directory defined in /etc/ansible/hosts.
