--- a/mindx-dl/deploy/offline/steps/offline_load_images.yaml
+++ b/mindx-dl/deploy/offline/steps/offline_load_images.yaml
@@ -1,4 +1,4 @@
-# Copyright ? Huawei Technologies Co., Ltd. 2020. All rights reserved.
+# Copyright © Huawei Technologies Co., Ltd. 2020. All rights reserved.
 ---
 # This playbook is used to load the Docker image offline.
 # Before running the script, ensure that the required image list has been uploaded to the 'dls_root_dir' directory defined in /etc/ansible/hosts.
