Match-id-cd47b91f92378df8b8ba150e8b4e90119b35514f

--- a/mindx-dl/uninstall/uninstall.yaml
+++ b/mindx-dl/uninstall/uninstall.yaml
@@ -1,3 +1,4 @@
+# Copyright © Huawei Technologies CO., Ltd. 2020-2020. All rights reserved
 ---
 # This playbook is used to uninstall MindX DL platform.
 # Before running the script, ensure that the dependent files are stored in the 'dls_root_dir' directory defined in /etc/ansible/hosts
